# poetry-fastapi-docker-example

./: .gitignore  Makefile  README.md  pyproject.toml
image/: Dockerfile
playground/: main.py
tests/: conftest.py  test_main.py
