[tool.poetry]
name = "playground"
version = "0.1.0"
description = ""
authors = ["Nicolai Bjerre Pedersen <mr.bjerre@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.89.1"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
gunicorn = "^20.1.0"


[tool.poetry.group.test.dependencies]
pyright = "^1.1.291"
pytest = "^7.2.1"
ruff = "^0.0.237"
black = "^22.12.0"
isort = "^5.12.0"
httpx = "^0.23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
exclude = [
    "**/.venv",
]

[tool.isort]
profile = "black"
extend_skip = [
    "scripts/install.python-poetry.org",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-r a -s"
testpaths = [
    "tests",
]

[tool.ruff]
exclude = [
    ".venv",
    ".ruff_cache",
    ".pytest_cache",
    "__pycache__",
]
target-version = "py311"